--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "build": "your build command here" 
+  
   },
   "author": "",
   "license": "ISC",
